Fix sidenav not showing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6460,8 +6460,8 @@ table {
   }
 
   .left-panel.mobile-hidden {
-    -webkit-transform: translate(-100%, 0);
-            transform: translate(-100%, 0);
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
   }
 }
 
